--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=0.14,<0.15"]
 build-backend = "maturin"
 
 [tool.poetry]
-name = "cad2bim"
+name = "fast-mahjong"
 version = "0.1.0"
 description = ""
 authors = ["Ryoya Nara"]
@@ -14,7 +14,7 @@ readme = "README.md"
 python = ">=3.7.1, <3.11"
 
 [project]
-name = "fast-mahjong"
+name = "fast-mahjong-rs"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
